--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>FAQ</title></head><body><h1>Frequently Asked Questions</h1><p>Ask us anything!</p></body></html>
+<!DOCTYPE html><html><head><title>FAQ</title><link rel='stylesheet' href='css/style.css'></head><body><h1>Frequently Asked Questions</h1></body></html>
