--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Contact</title></head><body><h1>Contact Us</h1><p>WhatsApp us or drop a message.</p></body></html>
+<!DOCTYPE html><html><head><title>Contact</title><link rel='stylesheet' href='css/style.css'></head><body><h1>Contact Us</h1></body></html>
