--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Gallery</title></head><body><h1>Gallery</h1><p>Photos coming soon.</p></body></html>
+<!DOCTYPE html><html><head><title>Gallery</title><link rel='stylesheet' href='css/style.css'></head><body><h1>Travel Gallery</h1></body></html>
