--- a/services.html
+++ b/services.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Services</title></head><body><h1>Our Services</h1><ul><li>Taxi</li><li>Hotel</li><li>Tours</li></ul></body></html>
+<!DOCTYPE html><html><head><title>Services</title><link rel='stylesheet' href='css/style.css'></head><body><h1>Our Services</h1></body></html>
