--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><title>Ghum Lo Bro</title><link rel='stylesheet' href='css/style.css'></head><body><h1>Welcome to Ghum Lo Bro</h1><p>Wherever the vibes take you</p></body></html>
+<head>
+  <meta charset="UTF-8">
+  <title>Ghum Lo Bro</title>
+  <style>
+    body { font-family: 'Segoe UI', sans-serif; background: #f5f7f8; margin:0; padding:0; color:#333; }
+    header { background:#2e8b57; color:#fff; padding:25px;text-align:center; }
+    nav { background:#444; padding:12px; text-align:center; }
+    nav a { color:#fff; margin:0 12px; text-decoration:none; font-weight:bold; }
+    nav a:hover { color:#80ffdb; text-decoration:underline; }
+    main { max-width:1000px; margin:auto; background:#fff; padding:30px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
+  </style>
+</head>
